# online_mart

./: compose.yaml
inventory_service/: Dockerfile  Dockerfile.dev
inventory_service/app/: main.py
notification_service/: Dockerfile
notification_service/app/: main.py
order_service/: Dockerfile  pyproject.toml
order_service/app/: main.py
payment_service/: Dockerfile  pyproject.toml
payment_service/app/: main.py
product_service/: Dockerfile  pyproject.toml
product_service/app/: main.py
user_service/: Dockerfile
user_service/app/: main.py
